--- a/src/components/widgets/Footer.astro
+++ b/src/components/widgets/Footer.astro
@@ -45,6 +45,7 @@ const { socialLinks = [], secondaryLinks = [], links = [], footNote = '', theme 
             ))
           }
         </div>
+        <p class="text-sm text-muted ">IEEE Student Branch of Uni Ruse. A not-for-profit organization, IEEE is the world's largest technical professional organization dedicated to advancing technology for the benefit of humanity.</p>
       </div>
       {
         links.map(({ title, links }) => (
