--- a/src/pages/about/team.astro
+++ b/src/pages/about/team.astro
@@ -49,14 +49,14 @@ const meta = {
             <div class="flex items-center">
                 <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
-                    <p class="text-lg font-bold ">Atila Pandzhar</p>
-                    <p class="text-sm text-gray-600">Member</p>
+                    <p class="text-lg font-bold ">Tsvetelina Mladenova</p>
+                    <p class="text-sm text-gray-600">Counsellor</p>
                 </div>
             </div>
             <div class="flex items-center">
                 <img src="/no-avatar.jpg" class="object-cover w-20 h-20 mr-4 rounded-full shadow">
                 <div class="relative">
-                    <p class="text-lg font-bold ">Martin Minchev</p>
+                    <p class="text-lg font-bold ">Atila Pandzhar</p>
                     <p class="text-sm text-gray-600">Member</p>
                 </div>
             </div>
